《🚩🇨🇳🔆🏹🌟👊🚀🦔大秦赋 - 黄埔军校赢家黄氏j江夏堂 - 中科红旗，高频量化对冲》
#春秋战国 #诸子百家 #秦人牧马 #世袭制道教徒赢家黄氏江夏堂 #世袭制杏林林氏西河堂 #道家中科红旗高频量化对冲 #万般皆下品唯有读书高 #大秦赋 #ChineseEmpire #公元前B4Christ只有中文BC没有外文 #世袭制道教徒赢家黄氏江夏堂拯救亚洲人歼灭所有巫裔回教徒Anti_Islamic_Virus_and_NonHalal_Only_governance #中国政府南太平洋战略 #大葱回教堂商鞅变法Anti_Islamic_Virus #Only_NonHalal_can_Survive #古老的东方有一条河它的名字叫黄河 #古老的东方有一条江它的名字叫长江 #江夏堂 #西河堂 #黄河文明 #黄埔军校 #黄种人🎶 #农民🎶
印裔尽弃（祖籍印尼的巫裔回教徒和土著、祖籍印度乌裔回教徒和兴都教徒和土著，咱们华人都是世袭制道家姓氏堂号/生辰八字的黄河文明/赢家黄氏江夏堂黄埔军校/黄种人/华夏民族/十二生肖/秦人牧马/燕从京来），瓦釜雷鸣；
莫忘初衷，方得始终。

《🚩🇨🇳🔆🏹🌟👊🚀🦔大秦赋 - 黄埔军校赢家黄氏j江夏堂 - 中科红旗，高频量化对冲》

「大秦赋 - 借鉴黄河文明史」
秦国三杰，拯救亚洲；
歼灭印裔，取代美国。
秦灭六洲，一统天下；
莫忘初衷，方得始终。

注释：印裔是祖籍印尼和印度、世袭制法家可兰经回教刑事法典断肢法的回教徒和世袭制奴隶大宝森节和屠妖节杀戮习俗文化的兴都教徒。

#春秋战国 #七大洲五大洋 #诸子百家 #鬼谷传奇 #世袭制道教徒学术份子 #秦国文臣三杰商鞅吕不韦李斯 #秦国China #洲学论 #关雎 #山海经 #军官与淑女 #关关雎鸠在河之洲是黄河文明
🚩🌟🦔赢家黄氏江夏堂，黄河文明、黄埔军校、黄种人嬴政之黄河文明拯救亚洲人，焚经坑乌（歼灭所有可兰经回教刑事法典断肢法的回教徒和吠陀经大宝森节屠妖节习俗文化的兴都教徒），功勋超过历代三黄五帝，建立道家、物理学、统筹法、运筹学、学术、金融、军事、易经、算卜、概率论与博弈论、黄种人世袭制道家民族主义，史称「秦始皇」
🚩🌟🦔杏林林氏西河堂，复兴中华杏林、金融、农业、武术、学术、道家、物理学、统筹法、运筹学、算卜、🧶刺绣密码学、科技信息学、概率论与博弈论、易经世纪大革命
🚩🌟🦔商家苏氏阜阳堂，复兴华夏司法界、商业、农业、物理学、统筹法、运筹学、学术、治安、易经、算卜、概率论与博弈论、金融大革命
🚩🌟🦔道家肖氏远芳堂，复兴中华道家、十二生肖、天文历法、物理学、统筹法、运筹学、学术、算卜、概率论与博弈论、易经世纪大革命

🚩🇨🇳🏹🌟🦔量化对冲，中科红旗；一带一路，一统天下（兵马未动，粮草先行；人民币货币经济学，东亚中国司马错得蜀既得楚；歼灭东南亚所有回教徒和峇峇娘惹并攻占东南亚，尤其是四季仔的印尼回教徒外劳房客、阿塔的孟加拉回教徒外劳房客、瓜雪回教市政局柜台巫婆回教徒奴辱依杀、瓜雪回教土地局巫贼巫婆回教徒汪阿自杀和懦蛤仕蟆和法米仨、瓜雪回教警署巫贼巫婆回教徒、大港回教警署所有巫贼巫婆回教徒、瓜雪RHU（淮西派）花园加德士油站隔壁第三巷门牌卅二号边抽鼻涕边求命边膜拜边失心疯边自残自虐自杀的土司乩童刘瑾貹、瓜雪巴西不能帮门牌T十五号吱吱吾语的失心疯猥亵淫魔土司乩童张佳坤、瓜雪回教警署巫贼回教徒黑米哈山·殡·伊不拉心和马航日语组森美兰人黑米哈山。）、大港巴列特花园第十三巷门牌廿七廿九号土司乩童胖妈和卅一号李东海和李东梅和所有回教徒（尤其是回教徒公仆）和峇峇娘惹党羽、所有印裔（祖籍印尼包括土著和回教徒、祖籍印度的兴都教徒和回教徒包括土著）。

🚩🇨🇳🏹🌟🦔诸子百家：印裔回教徒尽弃，瓦釜雷鸣。儒学、墨学、法学、道学、兵法、阴阳学、佛学、哲学、运筹学、思想录、干支算筹、中华习俗文化宗教语言复兴、学术数学科学科技大秦赋

🚩🇨🇳🏹🌟🦔《大秦赋 - 🇨🇳关雎》
🚩🇨🇳🏹🌟🦔春秋战国，诸子百家；
🚩🇨🇳🏹🌟🦔左氏春秋，鬼谷传奇。
🚩🇨🇳🏹🌟🦔商鞅变法，道法兵家；
🚩🇨🇳🏹🌟🦔四面楚歌，焚经坑番。
🚩🇨🇳🏹🌟🦔一带一路，横跨七洲；
🚩🇨🇳🏹🌟🦔史无前例，一统天下。
🚩🇨🇳🏹🌟🦔高频量化，对冲基金；
🚩🇨🇳🏹🌟🦔只争朝夕，不负韶华。
🚩🇨🇳🏹🌟🦔学海无涯，唯勤是岸；
🚩🇨🇳🏹🌟🦔莫忘初衷，方得始终。
https://gitee.com/eglianhu

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 .Rhistory
 .RData
 .Ruserdata
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/逐渐消失的印度唐人街，由几万人到几百人，华人生活艰难想回中国.mp4
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/都知秦最终胜六国，可看过商鞅「垦草令」后，你还愿生活在秦吗？.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/酒泉衛星發射中心使用長征四號丙運載火箭衛星主要用於國土普查、城市規劃、土地確權、路網設計、農作物估產和防災減災等領域.mp4
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/野心勃勃的李斯，大秦帝国的间谍政策.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/阳历二零二三年六至八月廿五日国际生报读独中，教部澄清未拒任何申请.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/阳历二零二二年各省净上缴税收一览表.png
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/雪拨地建独中.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/雪拨地建独中.png
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/韩国学者曰 - 中俄争议领土！西伯利亚归属中国？有什么证据？.mp4
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/风铃公主.png
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马云要搞农业！？「一米八」科技公司成立 - 布局智慧农业、水产养殖、食品销售等.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马华公会 - 「华⼈回中国」论破坏⼤⻢和谐，扎基尔应滚回印度.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马华公会 - 陈祯禄.png
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马华公会全国工农组常年大会.png
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马华总会长拿督斯里魏家祥博士敦促柔佛马华至少招四千年轻人入党.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马来西亚中药材涨幅一倍，清热解毒药材需求量多.pdf
+始祖永春∙大秦赋（Chinese Emperor）/秦孝公赢渠梁求贤令（商鞅|商君书、垦殖令、废井田、开阡陌）/马来西亚华人公会.png
